--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,13 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
+apply plugin: 'com.google.gms.google-services'
+task wrapper(type: Wrapper){
+   gradleVersion = '7.2'
+}
+task prepareKotlinBuildScriptModel {
+
+}
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -81,6 +88,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+         vectorDrawables.useSupportLibrary = true
     }
     signingConfigs {
         debug {
