--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,7 @@
 buildscript {
     ext {
+         googlePlayServicesVersion = "<+>" 
+         firebaseMessagingVersion = "<21.1.0>" 
         buildToolsVersion = "34.0.0"
         minSdkVersion = 21
         compileSdkVersion = 34
@@ -10,11 +12,21 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        mavenLocal()
+      jcenter()
+      maven { url "$rootDir/../node_modules/react-native/android" }
+
+      // ADD THIS
+      maven { url 'https://maven.google.com' }
+
+      // ADD THIS
+      maven { url "https://www.jitpack.io" }
     }
     dependencies {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
+        classpath('com.google.gms:google-services:4.4.0')
     }
 }
 
