--- a/package.json
+++ b/package.json
@@ -10,8 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.8.0",
+    "@react-native-firebase/auth": "^18.8.0",
+    "@react-native-firebase/firestore": "^18.8.0",
+    "@react-navigation/bottom-tabs": "^6.5.12",
+    "@react-navigation/material-top-tabs": "^6.6.6",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
+    "lottie-react-native": "^6.6.0",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-image-crop-picker": "^0.40.3",
+    "react-native-image-picker": "^5.3.1",
+    "react-native-pager-view": "^6.2.3",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
